# flexistore_manager-main

./: README.md  pubspec.yaml
backend_cpp/: CMakeLists.txt  flexistoreDB.sql
backend_cpp/cmake/: FindMySQL.cmake
backend_cpp/src/audit/: audit_logger.cpp  audit_logger.h
backend_cpp/src/auth/: auth_functions.cpp  auth_functions.h
backend_cpp/src/core/: db_config.h  db_connection_pool.cpp  db_connection_pool.h  db_initializer.cpp  db_initializer.h  ffi_types.h  json_builder.cpp  json_builder.h  session_manager.cpp  session_manager.h
backend_cpp/src/dashboard/: dashboard_queries.cpp  dashboard_queries.h
lib/: main.dart
lib/audit/data/: audit_ffi.dart
lib/audit/screens/: audit_debug_screen.dart  inventory_logs_screen.dart  transaction_logs_screen.dart
lib/auth/data/: auth_ffi.dart  session_ffi.dart
lib/auth/screens/: login_screen.dart
lib/core/: app_router.dart  app_shell.dart  ffi_helpers.dart  native_bridge.dart  sidebar_widget.dart
lib/dashboard/data/: dashboard_ffi.dart
lib/dashboard/screens/: dashboard_screen.dart
lib/dashboard/widgets/: stat_card_widget.dart
lib/inventory/data/: inventory_ffi.dart  inventory_ffi_native.dart  inventory_ffi_stub.dart
lib/inventory/models/: product.dart
lib/inventory/screens/: inventory_screen.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
